[project]
name = "openrelik-ai-common"
version = "0.6.1"
description = "Common utilities for OpenRelik AI functionality"
authors = [{name = "Johan Berggren", email = "jberggren@gmail.com"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.3.3,<0.4.0",
    "google-genai>=1.2.0,<2.0.0",
    "ratelimit>=2.2.1,<3.0.0",
    "backoff>=2.2.1,<3.0.0",
    "openai>=1.0.0,<2.0.0",
    "tiktoken>=0.9.0,<0.10.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3,<10.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
